@@ -45,7 +45,7 @@ PART
 	RESOURCE
 	{
 		name = Antimatter
-		amount = 0
+		amount = 5000
 		maxAmount = 5000
 	}
 
