@@ -45,7 +45,7 @@ PART
 	RESOURCE
 	{
 		name = Antimatter
-		amount = 0
+		amount = 50
 		maxAmount = 50
 	}
 	RESOURCE
